<resources>
    <string name="app_name">Implicit Intents</string>
    <string name="http_developer_android_com">http://developer.android.com</string>
    <string name="open_website">Open Website</string>
    <string name="golden_gate_bridge">Golden Gate Bridge</string>
    <string name="open_location">Open Location</string>
    <string name="my_name_is_sreehari">My name is Sreehari</string>
    <string name="share_this_text">Share This Text</string>
</resources>