<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/website_edittext"
        android:text="@string/http_developer_android_com"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open_website_button"
        android:layout_marginBottom="20dp"
        android:text="@string/open_website"
        android:onClick="openWebsite"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_edittext"
        android:text="@string/golden_gate_bridge"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open_location_button"
        android:layout_marginBottom="20dp"
        android:text="@string/open_location"
        android:onClick="openLocation"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/share_edittext"
        android:text="@string/my_name_is_sreehari"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/share_text_button"
        android:layout_marginBottom="20dp"
        android:text="@string/share_this_text"
        android:onClick="shareText"/>




</LinearLayout>